--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -46,6 +46,18 @@ layout: default
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- single -->
+      <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-4362752107119680"
+          data-ad-slot="6273258292"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+
       <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
@@ -57,17 +69,6 @@ layout: default
           <p class="page__date"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></p>
         {% endif %}
       </footer>
-
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <div align="center" style="margin: 1em 0;">
-      <ins class="adsbygoogle"
-          style="display:block; border-bottom: initial;"
-          data-ad-client="ca-pub-4362752107119680"
-          data-ad-format="auto"></ins>
-      </div>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
 
       {% if page.share %}{% include social-share.html %}{% endif %}
 
