--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -55,7 +55,9 @@
           {% endif %}
         {% endfor %}
       {% endif %}
-
+      
+      <a href='https://ko-fi.com/X8X1W6OZ' target='_blank'><img height='36' width="144" style='border:0px;height:36px;width:144px' src='https://az743702.vo.msecnd.net/cdn/kofi2.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+      
       {% if author.uri %}
         <li>
           <a href="{{ author.uri }}" itemprop="url">
