--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -195,6 +195,10 @@ body:hover .visually-hidden button {
     color: $behance-color;
   }
 
+  .fas fa-coffee {
+    color: #848786;
+  }
+
   .fa-bitbucket {
     color: $bitbucket-color;
   }
